--- a/login.html
+++ b/login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="./layouts/login.css">
-    <link rel="shortcut icon" href="/layouts/phenix.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="./login.css">
+    <link rel="shortcut icon" href="./phenix.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <section id="cont">
         <form action="">
-            <img src="/layouts/images/insta.png" alt="">
+            <img src="./images/insta.png" alt="">
             <input type="text" placeholder="Phone number,username,or email">
             <input type="password" placeholder="Password">
             <button>Log in</button>
